[gd_scene load_steps=12 format=3 uid="uid://dq5ntdtxdyc8c"]

[ext_resource type="Script" path="res://Scenes/UI/settings_menu.gd" id="1_uuh1i"]
[ext_resource type="FontFile" uid="uid://ca1xyci8y4mc5" path="res://Fonts/Nunito/static/Nunito-BoldItalic.ttf" id="2_2ksna"]
[ext_resource type="FontFile" uid="uid://dwise6tlxxmb" path="res://Fonts/Nunito/static/Nunito-Medium.ttf" id="3_ur1dc"]
[ext_resource type="FontFile" uid="uid://wcx8hoexeh7x" path="res://Fonts/Nunito/static/Nunito-Bold.ttf" id="4_grtet"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0vk4d"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8fw3b"]
bg_color = Color(0, 0, 0, 0.486275)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lawxx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pcowc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o00mv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wv853"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hm6t0"]

[node name="SettingsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = -960.0
offset_bottom = -540.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uuh1i")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 220
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 220

[node name="Background" type="Panel" parent="MarginContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0vk4d")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Settings" type="Label" parent="MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2ksna")
theme_override_font_sizes/font_size = 46
text = "Settings"
horizontal_alignment = 1

[node name="DisplayContainer" type="HBoxContainer" parent="MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DisplayMode" type="Label" parent="MarginContainer2/MarginContainer/VBoxContainer/DisplayContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ur1dc")
theme_override_font_sizes/font_size = 25
text = "Display Mode"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="MarginContainer2/MarginContainer/VBoxContainer/DisplayContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_fonts/font = ExtResource("3_ur1dc")
selected = 0
item_count = 2
popup/item_0/text = "Windowed"
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="VSeparator" type="HSeparator" parent="MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MasterContainer" type="HBoxContainer" parent="MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="MarginContainer2/MarginContainer/VBoxContainer/MasterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ur1dc")
theme_override_font_sizes/font_size = 25
text = "Master Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/MarginContainer/VBoxContainer/MasterContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="MasterVolSlider" type="HSlider" parent="MarginContainer2/MarginContainer/VBoxContainer/MasterContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 2.08165e-12
value = -10.0

[node name="Max" type="Label" parent="MarginContainer2/MarginContainer/VBoxContainer/MasterContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ur1dc")
theme_override_font_sizes/font_size = 25
text = " Max"

[node name="MusicContainer" type="HBoxContainer" parent="MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Music" type="Label" parent="MarginContainer2/MarginContainer/VBoxContainer/MusicContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ur1dc")
theme_override_font_sizes/font_size = 25
text = "Music Volume"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer2/MarginContainer/VBoxContainer/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="MusicVolSlider" type="HSlider" parent="MarginContainer2/MarginContainer/VBoxContainer/MusicContainer/HBoxContainer2"]
custom_minimum_size = Vector2(400, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 2.08165e-12
value = -10.0

[node name="Max" type="Label" parent="MarginContainer2/MarginContainer/VBoxContainer/MusicContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ur1dc")
theme_override_font_sizes/font_size = 25
text = " Max"

[node name="EffectsContainer" type="HBoxContainer" parent="MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SoundEffectts" type="Label" parent="MarginContainer2/MarginContainer/VBoxContainer/EffectsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ur1dc")
theme_override_font_sizes/font_size = 25
text = "Other Volume"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer2/MarginContainer/VBoxContainer/EffectsContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="EffectsVolSlider" type="HSlider" parent="MarginContainer2/MarginContainer/VBoxContainer/EffectsContainer/HBoxContainer3"]
custom_minimum_size = Vector2(400, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 2.08165e-12
value = -10.0

[node name="Max" type="Label" parent="MarginContainer2/MarginContainer/VBoxContainer/EffectsContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ur1dc")
theme_override_font_sizes/font_size = 25
text = " Max"

[node name="ButtonMarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 554.0
offset_top = 722.0
offset_right = 704.0
offset_bottom = 812.0

[node name="ButtonBackround" type="Panel" parent="ButtonMarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8fw3b")

[node name="BackButton" type="Button" parent="ButtonMarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_grtet")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_lawxx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_pcowc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_o00mv")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wv853")
theme_override_styles/normal = SubResource("StyleBoxEmpty_hm6t0")
text = "Back"

[node name="Label" type="Label" parent="ButtonMarginContainer/BackButton"]
layout_mode = 0
offset_left = 42.0
offset_top = 57.0
offset_right = 108.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(1, 1, 1, 0.631373)
theme_override_fonts/font = ExtResource("3_ur1dc")
text = "(Press B)"
horizontal_alignment = 1

[connection signal="item_selected" from="MarginContainer2/MarginContainer/VBoxContainer/DisplayContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="value_changed" from="MarginContainer2/MarginContainer/VBoxContainer/MasterContainer/HBoxContainer/MasterVolSlider" to="." method="_on_master_vol_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer2/MarginContainer/VBoxContainer/MusicContainer/HBoxContainer2/MusicVolSlider" to="." method="_on_music_vol_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer2/MarginContainer/VBoxContainer/EffectsContainer/HBoxContainer3/EffectsVolSlider" to="." method="_on_other_vol_slider_value_changed"]
[connection signal="pressed" from="ButtonMarginContainer/BackButton" to="." method="_on_button_pressed"]
